@@ -5,7 +5,8 @@ Changelog
 1.8.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use ftw.profilehook instead of custom import steps (setuphandlers).
+  [jone]
 
 
 1.8.2 (2014-08-07)
